[package]
name = "phoenix-common"
version = "0.2.1"
edition = "2021"
resolver = "2"
repository = "https://github.com/Ellipsis-Labs/phoenix-v1"
authors = ["Ellipsis Labs <maintainers@ellipsislabs.xyz>"]
description = "On-chain order book that atomically settles trades"
license-file = "LICENSE"

[lib]
crate-type = ["cdylib", "lib"]
name = "phoenix"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
test = []

[profile.release]
lto = "fat"
codegen-units = 1
overflow-checks = true

[dependencies]
shank = "0.0.12"
spl-token = { version = ">=3.5.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = ">=2.3.0", features = [ "no-entrypoint" ] } 
solana-program = "2.0.11"
borsh = "0.10.4"
bytemuck = "1.18.0"
lib-sokoban = "0.3.3" 
num_enum = "0.5.11"
itertools = "0.10.5"
thiserror = "1.0.64"
static_assertions = "1.1.0"
