[package]
name = "phoenix-common"
version = "0.2.1"
edition = "2021"
resolver = "2"
repository = "https://github.com/Ellipsis-Labs/phoenix-v1"
authors = ["Ellipsis Labs <maintainers@ellipsislabs.xyz>"]
description = "On-chain order book that atomically settles trades"
license-file = "LICENSE"

[lib]
crate-type = ["cdylib", "lib"]
name = "phoenix"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
test = []

[profile.release]
lto = "fat"
codegen-units = 1
overflow-checks = true

[dependencies]
shank = "0.4.2"
spl-token = { version = ">=3.5.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = ">=2.3.0", features = [ "no-entrypoint" ] } 
solana-program = "2.1.5"
borsh = "1.5.3"
bytemuck = "1.20.0"
lib-sokoban = "0.3.3" 
num_enum = "0.7.3"
itertools = "0.13.0"
thiserror = "2.0.3"
static_assertions = "1.1.0"
